[package]
name = "moby_dick"
version = "0.1.0"
edition = "2024"

[dependencies]
# Ethereum blockchain interaction (the modern replacement for ethers-rs)
alloy = { version = "1", features = ["full"] }

# Async runtime — powers all our concurrent tasks
tokio = { version = "1", features = ["full"] }

# Telegram bot API
teloxide = { version = "0.17", features = ["macros"] }

# Load secrets from .env file
dotenvy = "0.15"

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ergonomic error handling (no more manual error types)
anyhow = "1"

# Stream utilities (for iterating over WebSocket event streams)
futures-util = "0.3"

# Structured logging (never use println! in production Rust)
tracing = "0.1"
tracing-subscriber = "0.3"
